--- a/css/master.css
+++ b/css/master.css
@@ -73,6 +73,7 @@ body {
   width: 20%;
   height: 100%;
   z-index: 3333;
+  min-height: 100vh;
 }
 .navbar img {
   max-width: 100px;
@@ -225,8 +226,7 @@ body {
   color: #ffff00;
   line-height: 1.6;
   text-transform: capitalize;
-  padding: 20px 20px 20px 0;
-  padding-left: 30px;
+  padding: 20px 20px 20px 30px;
 }
 .about .container p {
   line-height: 1.6;
@@ -265,7 +265,7 @@ body {
   }
 
   .container {
-    width: 100%;
+    width: 94%;
   }
 }
 @media (max-width: 326px) {
