--- a/css/master.css
+++ b/css/master.css
@@ -6,7 +6,10 @@
   list-style: none;
   text-decoration: none;
 }
-
+small{
+ color:red !important;
+  font-size:15px !important;
+}
 html {
   scroll-behavior: smooth;
 }
@@ -188,10 +191,7 @@ body {
   top: 0px;
   right: 0px;
 }
-small{
- color:red;
-  font-size:15px;
-}
+
 .name-section h1 {
   text-transform: uppercase;
   letter-spacing: 5px;
